[metadata]
name = ignite_client
version = 0.0.1
description = ignite_client is a python client for Apache Ignite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/protocol-laboratory/ignite-client-python.git
author = ZhangJian He
author_email = shoothzj@gmail.com
license = Apache License 2.0

[options]
packages = find:

[options.packages.find]
where = ignite_client
